--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,9 @@
     "jquery": "~2.1.0",
     "angular": "~1.2.14",
     "angular-ui-router": "~0.2.9"
+  },
+  "devDependencies": {
+    "mocha": "~1.17.1",
+    "chai": "~1.9.0"
   }
 }
