--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Presenter",
+  "name": "presenter",
   "version": "0.0.0",
   "homepage": "https://github.com/drewbarontini/presenter",
   "authors": [
