--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "jquery": "~2.1.0",
     "angular": "~1.2.16",
-    "angular-ui-router": "~0.2.9"
+    "angular-ui-router": "~0.2.9",
+    "angular-touch": "~1.2.16"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
